fixed deprecated and removal for java 21